plugins {
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'io.github.wypeboard.adoassistant'
version = '0.0.2'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

javafx {
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {

    // Logging
    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'ch.qos.logback:logback-classic:1.5.17'

    // Jackson - Serialization
    implementation 'com.fasterxml.jackson.core:jackson-core:2.19.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.19.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.19.2'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.19.2'


    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}

task runApp(type: JavaExec) {
    group = 'application'
    description = 'Run the ADO Assistant application'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'io.github.wypeboard.adoassistant.AdoAssistantApplication'

    // Ensure JavaFX modules are available
    jvmArgs = [
            '--module-path', configurations.runtimeClasspath.asPath,
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}